--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Hey you !</title>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>AuditVehicle</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#2196f3">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    Hi sexy boy !
-</body>
+  <app-root>
+    <nav
+      style="background-color: #673ab7; height: 56px; width: 100%">
+    </nav>
+    <div id="loading"></div>
+  </app-root>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
+<noscript>
+  <h3 style="color: #673ab7; margin: 2rem;">
+    Sorry, but app is not available without javascript
+  </h3>
+</noscript>
